# trade-watcher

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: how_to_get_access_token.md  watcher-cli-design.md  접근토큰발급(P)[인증-001].xlsx
docs/api/: current-stock-price.md  fetch-stock-price-by-periodic.md  oversea-periodic-price.md  oversea-stock-price.md  국내주식기간별시세(일_주_월_년)[v1_국내주식-016].xlsx  주식현재가 시세[v1_국내주식-008].xlsx  해외주식 종목_지수_환율기간별시세(일_주_월_년)[v1_해외주식-012].xlsx  해외주식 현재가상세[v1_해외주식-029].xlsx
docs/stocks/: kosdaq_code.txt  kospi_code.txt  (+6 more)
watcher-cli/: .env.sample  README.md  main.py  pyproject.toml
watcher-cli/tests/: test_app.py  test_catalog.py  test_kis.py  test_quotes.py  test_storage.py  test_terminal.py
watcher-cli/watcher_cli/: __init__.py  app.py  catalog.py  client.py  config.py  kis.py  models.py  quotes.py  storage.py  terminal.py
watcher-engine/: .env.sample  AGENTS.md  README.md  pyproject.toml
watcher-engine/app/: main.py
watcher-engine/app/routers/: portfolio.py  stocks.py  watchlists.py
watcher-engine/app/services/: oversea_stock_price_service.py  portfolio_service.py  stock_current_price_service.py  stock_price_service.py  stock_service.py  watchlist_service.py
watcher-engine/core/: __init__.py  config.py
watcher-engine/data/: stocks.db  stocks.db.backup.20260208_004720
watcher-engine/db/: __init__.py  database.py  models.py
watcher-engine/loaders/: __init__.py  stock_parser.py
watcher-engine/tests/: test_current_price.py  test_nxt_price.py  test_overseas_price.py  test_periodic_prices.py  test_stock_parser.py  test_watchlists.py
(+1 files in other folders)
